// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`let.js - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "typescript"]
printWidth: 80
semi: false
                                                                                | printWidth
=====================================input======================================
let.a = 1;

foo = [];
(let[a] = 1);

foo = [];
(let[a].b.c.e = 1);

foo = [];
foo[let[a]] = 1;

foo = [];
(let)[let[a]] = 1;

foo = [];
(let[a] ??= 1);

foo = let[a];

=====================================output=====================================
let.a = 1

foo = []
;(let)[a] = 1

foo = []
;(let)[a].b.c.e = 1

foo = []
foo[let[a]] = 1

foo = []
;(let)[let[a]] = 1

foo = []
;(let)[a] ??= 1

foo = let[a]

================================================================================
`;

exports[`let.js format 1`] = `
====================================options=====================================
parsers: ["babel", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
let.a = 1;

foo = [];
(let[a] = 1);

foo = [];
(let[a].b.c.e = 1);

foo = [];
foo[let[a]] = 1;

foo = [];
(let)[let[a]] = 1;

foo = [];
(let[a] ??= 1);

foo = let[a];

=====================================output=====================================
let.a = 1;

foo = [];
(let)[a] = 1;

foo = [];
(let)[a].b.c.e = 1;

foo = [];
foo[let[a]] = 1;

foo = [];
(let)[let[a]] = 1;

foo = [];
(let)[a] ??= 1;

foo = let[a];

================================================================================
`;
